# matsu_shi

./: .env.example  .gitignore  PRD.md  README.md  Roadmap.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  implement.md  ingest_wiki.md
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_user_registration_fields.py  0003_users_cascade_delete.py
backend/app/: main.py
backend/app/agent/: __init__.py  classifier.py  reformulator.py  responder.py  router.py  title_generator.py
backend/app/api/: admin.py  auth.py  chat.py  feedback.py
backend/app/bot/: dispatcher.py
backend/app/core/: config.py  database.py  logging.py  security.py  tracing.py
backend/app/models/: __init__.py  admin_user.py  chunk.py  document.py  feedback.py  query.py  session.py  user.py
backend/app/rag/: __init__.py  dense_retriever.py  embedder.py  multi_retriever.py  retriever.py  sparse_retriever.py
backend/app/schemas/: __init__.py  query.py
backend/app/services/: feedback_service.py  query_service.py  session_service.py  user_service.py
backend/scripts/: create_admin.py  ingest.py  register_webhook.py
backend/tests/scripts/: conftest.py  test_step_chunk.py  test_step_parse.py  test_step_write.py
backend/tests/unit/: conftest.py  test_503_retry.py  test_admin_callbacks.py  test_classifier.py  test_dense_retriever.py  test_embedder.py  test_image_retriever.py  test_ingest_artifacts.py  test_inline_citations.py  test_multi_retriever.py  (+18 more)
(+96 files in other folders)
